--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<html>
+ <head>
+  <title>projeto soma</html>
+    <link rel="stylesheet"type="texto/css"href="style.css/>
+      <script type="text/javascript"src="script.js"></title></script>
+ </head>
+  <body>
+    <h1>10+15=</h1>
+    <imput type="button"onlick="mostra resultado()"value="calcular
+      id="botão/>
+      </body>
+ </html>
+    
