--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title>projeto soma</html>
     <link rel="stylesheet"type="texto/css"href="style.css/>
-      <script type="text/javascript"src="script.js"></title></script>
+      <script type="text/javascript"src="script.js"></script>
  </head>
   <body>
     <h1>10+15=</h1>
